# nonebot-plugin-fuckyou

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_fuckyou/: __init__.py  __main__.py  config.py  const.py
nonebot_plugin_fuckyou/resource/: builtin_gentle.json  builtin_violent.json
nonebot_plugin_template/: __init__.py
