[project]
name = "nonebot-plugin-fuckyou"
dynamic = ["version"]
description = "A NoneBot2 plugin designed for curse users"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-plugin-alconna>=0.59.4",
    "nonebot-plugin-session>=0.3.2",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc2333/nonebot-plugin-fuckyou"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_fuckyou/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
